0004 concat json to js

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 <div class="wrapper">
+	<button>jhsdjfjdsfjhfds</button>
+		<button>jhsdjfjdsfjhfds</button>
+			<button>jhsdjfjdsfjhfds</button>
+				<button>jhsdjfjdsfjhfds</button>
 	<form>
 		<div id="pump-holder">
 			
@@ -17,6 +21,7 @@
 		</div>
 	</form>
 </div>
+<script src="js/pumps.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
