--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 <body>
 <div class="wrapper">
 		<div id="pump-holder">
-			
+			<select name="" id="pump-select"></select>
+			<div id="text">
+			</div>
 		</div>
 		<div id="motor">
 			
