--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 		</div>
 	</form>
 </div>
+<script src="js/qmvw.js"></script>
 <script src="js/pumps.js"></script>
 <script src="js/main.js"></script>
 </body>
