--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
 			
 		</div>
 	</form>
+	<div class="testTemplate">
+
+	</div>
 </div>
+<script src="js/myFrame.js"></script>
 <script src="js/qmvw.js"></script>
 <script src="js/pumps.js"></script>
 <script src="js/main.js"></script>
